# qontrol_test

./: README.md
examples/: CMakeLists.txt  QontrolCustomConstraint.cpp  QontrolCustomTask.cpp  Qontrol_qpOASES.cpp  Qontrol_qpmad.cpp  torqueQontrol.cpp  velocityQontrol.cpp
examples/mujoco/: mujoco_sim.cpp  mujoco_sim.h  platform_ui_adapter.cc  platform_ui_adapter.h  simulate.cc  simulate.h
examples/resources/panda/: panda.xml  robot.urdf  scene.xml  trajectory.csv
examples/resources/ur5/: scene.xml  trajectory.csv  ur5e.xml
examples/trajectory_generation/: trajectory_generation.h
pycapacity/: test_force_capacity.py  test_reachable_ws.py
